data/diff_tests/wasmtime/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_806.wast
;; 7. **Test `nop` Instruction in Imported Function Modifying Stack with Locals**:    - **Constraint Checked**: Ensures `nop` does not interfere with imported function handling locals and stack.    - **Description**: Import a function that manipulates local variables and access the stack. Place `nop` instructions within this function to ensure no inadvertent modification occurs across implementations.

(assert_invalid
  (module 
    (import "env" "imported_func" (func $imported_func (param i32)))
    (func (local i32)
      local.get 0
      call $imported_func 
      nop))
  "type mismatch"
)